--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BuzzaPizza</string>
+    <string name="greeting">Good %1$s!</string>
+    <string name="btn_customize_pizza">Customize Pizza</string>
+    <string name="text_history_orders">History Orders</string>
 </resources>
