--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="greeting">Good %1$s!</string>
     <string name="btn_customize_pizza">Customize Pizza</string>
     <string name="text_history_orders">History Orders</string>
+    <string name="edit">Edit</string>
+    <string name="done">Done</string>
 </resources>
